// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gap report snapshots > is stable for ev-document-without-classification 1`] = `
{
  "buckets": {
    "conditional": 13,
    "deferred": 27,
    "optional": 6,
    "required": 47,
  },
  "byDataOwner": [
    "After-sales or service department of the pack manufacturer; often the manufacturer itself plus authorised service partners.",
    "Battery management system (BMS) charge counter.",
    "Battery management system (BMS) counters.",
    "Battery management system (BMS) cycle counter.",
    "Battery management system (BMS) energy counter.",
    "Battery management system (BMS) event log.",
    "Battery management system (BMS) of the vehicle; provided by the OEM or read out in the workshop.",
    "Battery management system (BMS) or periodic storage measurement by the operator.",
    "Battery management system (BMS) or the operator's periodic measurements.",
    "Battery management system (BMS) temperature sensors; logged by the operator.",
    "Battery management system (BMS), where the BMS can determine it.",
    "Battery management system (BMS); read out by the operator or workshop.",
    "Battery management system (BMS); read out by the operator, fleet manager or workshop.",
    "Battery management system (BMS); recorded periodically by the operator.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, backed by recycler certificates.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, backed by recycler certificates.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation; the pack manufacturer rarely has it and must request it.",
    "Cell and pack data sheet (storage conditions).",
    "Cell and pack data sheet; printed on the nameplate.",
    "Cell and pack data sheet; set in the BMS configuration.",
    "Cell manufacturer (cell-level bill of materials); the pack manufacturer usually only holds the cell data sheet and must request this.",
    "Cell manufacturer and cathode/anode active material suppliers; often available through IMDS/CDX material declarations.",
    "Cell manufacturer's cycle-life test report; declared by the pack manufacturer for the reference conditions.",
    "Cell manufacturer's cycle-life test report; pack manufacturer's specification for the pack.",
    "Cell manufacturer's data sheet (storage test at reference temperature).",
    "Cell manufacturer's data sheet for the cell value; pack manufacturer's end-of-line test for module and pack values.",
    "Cell manufacturer's data sheet; the pack manufacturer repeats it in its own specification.",
    "Cell manufacturer's data sheet; the pack manufacturer states the pack value in its specification.",
    "Cell or pack manufacturer's ageing test report.",
    "Cell or pack manufacturer's cycle-life test report.",
    "Cell or pack manufacturer's test laboratory; named in the cycle-life test report.",
    "Cell or pack manufacturer's test report under reference conditions.",
    "Compliance department, collected from refiners and material suppliers who participate in Commission-recognised schemes (Article 53).",
    "Compliance or procurement department of the economic operator placing the battery on the market; the report is verified by a notified body and published annually.",
    "Derived by the pack manufacturer from nominal power and energy on the data sheet.",
    "Determined by the manufacturer from the declared footprint once the Commission's delegated act defines the class boundaries.",
    "Determined by the manufacturer from the intended use (Article 3 definitions); usually obvious from the product data sheet.",
    "EHS department or the cell manufacturer's safety data sheet (section 5, firefighting measures).",
    "EHS department together with technical documentation; also derived from the cell safety data sheet.",
    "EHS department, from the cell manufacturer's safety data sheet (sections 2 and 3) and the material declaration.",
    "EHS department; the hazard statements are in the safety data sheet, section 2.",
    "LCA team, fed by the plant's energy bills and production data (this is where a supplier's own electricity mix enters).",
    "LCA team, using logistics data (transport modes and distances) from the supply chain or logistics department.",
    "LCA team, using recycling scenarios and recycler data; may be negative when recycling credits are applied.",
    "LCA team; derived from the per-kWh footprint and the lifetime energy throughput.",
    "LCA team; the split by life-cycle stage is part of the carbon footprint study required by Annex II.",
    "Lead supplier or cell manufacturer (relevant for lead-acid industrial batteries), with mass-balance documentation.",
    "Lead supplier or cell manufacturer, backed by recycler certificates.",
    "Operator, fleet manager, insurer or workshop; documented after the event and attached to the passport.",
    "Pack manufacturer or final assembler; printed on the nameplate and stored in the ERP/MES.",
    "Pack manufacturer's ageing test report (pack level mandatory, cell and module recommended).",
    "Pack manufacturer's ageing test report under reference conditions.",
    "Pack manufacturer's bill of materials (ERP/PLM); replaceable components such as modules, BMS, fuses, connectors.",
    "Pack manufacturer's data sheet and test report; measured per Annex IV Part B at a reference state of charge.",
    "Pack manufacturer's data sheet or weighing record at end of line; also on shipping documents.",
    "Pack manufacturer's data sheet; enforced by the BMS.",
    "Pack manufacturer's design specification, supported by the cell manufacturer's calendar ageing data.",
    "Pack manufacturer's engineering and technical documentation team (service manuals, exploded drawings).",
    "Pack manufacturer's materials engineering, based on supplier declarations for housings, separators and binders.",
    "Pack manufacturer's production planning or quality department; the facility identifier is often the plant code in the ERP.",
    "Pack manufacturer's production records (MES); often encoded in the serial number.",
    "Product compliance or marketing communications; often already part of the user manual and the producer's take-back information.",
    "Product compliance team, based on the material declaration from the cell manufacturer (cadmium above 0.002 % or lead above 0.004 % by weight).",
    "Product compliance together with the producer responsibility organisation or contracted recycler.",
    "Product compliance; content aligned with the producer responsibility organisation's take-back scheme.",
    "Quality department or the notified body / test laboratory that performed the tests; part of the technical documentation (Annex VIII).",
    "Sales or legal department of the manufacturer; stated in the warranty terms or data sheet.",
    "Same as the identification attributes: manufacturer master data and the battery model identification.",
    "Set to 'original' by the manufacturer; later changed by the remanufacturer, repurposer or waste operator who takes over the passport.",
    "Sustainability or LCA team of the manufacturer, once the Commission's delegated act defines the performance classes.",
    "Sustainability or procurement department; often taken from rating platforms used by OEM customers.",
    "Sustainability team; the study must be published on the internet under Article 7(1)(g).",
    "Technical documentation or labelling team of the manufacturer; usually already written for the user manual.",
    "The battery manufacturer's own master data (legal entity name, registered address, single contact point, web and e-mail address).",
    "The company placing the battery on the EU market (manufacturer, importer or distributor acting as operator); its registration or EORI number is in the commercial/customs records.",
    "The economic operator placing the battery on the market (usually the pack manufacturer or importer) assigns it when the passport is created.",
    "The installer or operator of the battery (e-bike dealer, ESS installer, fleet operator), not the manufacturer; it is written into the passport after sale.",
    "The manufacturer's labelling or product compliance team; the artwork is on the label drawing and in the technical documentation.",
    "The manufacturer's regulatory affairs or quality department issues it (Article 18, Annex IX); importers keep a copy.",
    "The manufacturer's sustainability or LCA team, usually with an external LCA consultant; upstream inputs come from the cell and cathode material suppliers.",
    "Vehicle BMS per UN GTR No 22; provided by the OEM or read out via the vehicle interface.",
    "Vehicle manufacturer (OEM) from the type-approval test under UN GTR No 22; the battery supplier usually receives it from the OEM.",
    "Vehicle manufacturer or pack manufacturer as the economic operator; part of the design specification.",
  ],
  "bySubmodel": [
    [
      1,
      "83.3",
    ],
    [
      3,
      "0.0",
    ],
    [
      4,
      "100.0",
    ],
    [
      5,
      "100.0",
    ],
    [
      6,
      "80.0",
    ],
    [
      7,
      "100.0",
    ],
    [
      null,
      "0.0",
    ],
  ],
  "category": "EV",
  "completeness": {
    "mandatory": {
      "percent": "93.6",
      "present": 44,
      "total": 47,
    },
    "overall": {
      "percent": "93.3",
      "present": 56,
      "total": 60,
    },
  },
  "invalid": [],
  "statuses": {
    "missing": 10,
    "present": 83,
  },
}
`;

exports[`gap report snapshots > is stable for ev-missing-material-identifier 1`] = `
{
  "buckets": {
    "conditional": 13,
    "deferred": 27,
    "optional": 6,
    "required": 47,
  },
  "byDataOwner": [
    "After-sales or service department of the pack manufacturer; often the manufacturer itself plus authorised service partners.",
    "Battery management system (BMS) charge counter.",
    "Battery management system (BMS) counters.",
    "Battery management system (BMS) cycle counter.",
    "Battery management system (BMS) energy counter.",
    "Battery management system (BMS) event log.",
    "Battery management system (BMS) of the vehicle; provided by the OEM or read out in the workshop.",
    "Battery management system (BMS) or periodic storage measurement by the operator.",
    "Battery management system (BMS) or the operator's periodic measurements.",
    "Battery management system (BMS) temperature sensors; logged by the operator.",
    "Battery management system (BMS), where the BMS can determine it.",
    "Battery management system (BMS); read out by the operator or workshop.",
    "Battery management system (BMS); read out by the operator, fleet manager or workshop.",
    "Battery management system (BMS); recorded periodically by the operator.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, backed by recycler certificates.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, backed by recycler certificates.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation; the pack manufacturer rarely has it and must request it.",
    "Cell and pack data sheet (storage conditions).",
    "Cell and pack data sheet; printed on the nameplate.",
    "Cell and pack data sheet; set in the BMS configuration.",
    "Cell manufacturer (cell-level bill of materials); the pack manufacturer usually only holds the cell data sheet and must request this.",
    "Cell manufacturer and cathode/anode active material suppliers; often available through IMDS/CDX material declarations.",
    "Cell manufacturer's cycle-life test report; declared by the pack manufacturer for the reference conditions.",
    "Cell manufacturer's cycle-life test report; pack manufacturer's specification for the pack.",
    "Cell manufacturer's data sheet (storage test at reference temperature).",
    "Cell manufacturer's data sheet for the cell value; pack manufacturer's end-of-line test for module and pack values.",
    "Cell manufacturer's data sheet; the pack manufacturer repeats it in its own specification.",
    "Cell manufacturer's data sheet; the pack manufacturer states the pack value in its specification.",
    "Cell or pack manufacturer's ageing test report.",
    "Cell or pack manufacturer's cycle-life test report.",
    "Cell or pack manufacturer's test laboratory; named in the cycle-life test report.",
    "Cell or pack manufacturer's test report under reference conditions.",
    "Compliance department, collected from refiners and material suppliers who participate in Commission-recognised schemes (Article 53).",
    "Compliance or procurement department of the economic operator placing the battery on the market; the report is verified by a notified body and published annually.",
    "Derived by the pack manufacturer from nominal power and energy on the data sheet.",
    "Determined by the manufacturer from the declared footprint once the Commission's delegated act defines the class boundaries.",
    "Determined by the manufacturer from the intended use (Article 3 definitions); usually obvious from the product data sheet.",
    "EHS department or the cell manufacturer's safety data sheet (section 5, firefighting measures).",
    "EHS department together with technical documentation; also derived from the cell safety data sheet.",
    "EHS department, from the cell manufacturer's safety data sheet (sections 2 and 3) and the material declaration.",
    "EHS department; the hazard statements are in the safety data sheet, section 2.",
    "LCA team, fed by the plant's energy bills and production data (this is where a supplier's own electricity mix enters).",
    "LCA team, using logistics data (transport modes and distances) from the supply chain or logistics department.",
    "LCA team, using recycling scenarios and recycler data; may be negative when recycling credits are applied.",
    "LCA team; derived from the per-kWh footprint and the lifetime energy throughput.",
    "LCA team; the split by life-cycle stage is part of the carbon footprint study required by Annex II.",
    "Lead supplier or cell manufacturer (relevant for lead-acid industrial batteries), with mass-balance documentation.",
    "Lead supplier or cell manufacturer, backed by recycler certificates.",
    "Operator, fleet manager, insurer or workshop; documented after the event and attached to the passport.",
    "Pack manufacturer or final assembler; printed on the nameplate and stored in the ERP/MES.",
    "Pack manufacturer's ageing test report (pack level mandatory, cell and module recommended).",
    "Pack manufacturer's ageing test report under reference conditions.",
    "Pack manufacturer's bill of materials (ERP/PLM); replaceable components such as modules, BMS, fuses, connectors.",
    "Pack manufacturer's data sheet and test report; measured per Annex IV Part B at a reference state of charge.",
    "Pack manufacturer's data sheet or weighing record at end of line; also on shipping documents.",
    "Pack manufacturer's data sheet; enforced by the BMS.",
    "Pack manufacturer's design specification, supported by the cell manufacturer's calendar ageing data.",
    "Pack manufacturer's engineering and technical documentation team (service manuals, exploded drawings).",
    "Pack manufacturer's materials engineering, based on supplier declarations for housings, separators and binders.",
    "Pack manufacturer's production planning or quality department; the facility identifier is often the plant code in the ERP.",
    "Pack manufacturer's production records (MES); often encoded in the serial number.",
    "Product compliance or marketing communications; often already part of the user manual and the producer's take-back information.",
    "Product compliance team, based on the material declaration from the cell manufacturer (cadmium above 0.002 % or lead above 0.004 % by weight).",
    "Product compliance together with the producer responsibility organisation or contracted recycler.",
    "Product compliance; content aligned with the producer responsibility organisation's take-back scheme.",
    "Quality department or the notified body / test laboratory that performed the tests; part of the technical documentation (Annex VIII).",
    "Sales or legal department of the manufacturer; stated in the warranty terms or data sheet.",
    "Same as the identification attributes: manufacturer master data and the battery model identification.",
    "Set to 'original' by the manufacturer; later changed by the remanufacturer, repurposer or waste operator who takes over the passport.",
    "Sustainability or LCA team of the manufacturer, once the Commission's delegated act defines the performance classes.",
    "Sustainability or procurement department; often taken from rating platforms used by OEM customers.",
    "Sustainability team; the study must be published on the internet under Article 7(1)(g).",
    "Technical documentation or labelling team of the manufacturer; usually already written for the user manual.",
    "The battery manufacturer's own master data (legal entity name, registered address, single contact point, web and e-mail address).",
    "The company placing the battery on the EU market (manufacturer, importer or distributor acting as operator); its registration or EORI number is in the commercial/customs records.",
    "The economic operator placing the battery on the market (usually the pack manufacturer or importer) assigns it when the passport is created.",
    "The installer or operator of the battery (e-bike dealer, ESS installer, fleet operator), not the manufacturer; it is written into the passport after sale.",
    "The manufacturer's labelling or product compliance team; the artwork is on the label drawing and in the technical documentation.",
    "The manufacturer's regulatory affairs or quality department issues it (Article 18, Annex IX); importers keep a copy.",
    "The manufacturer's sustainability or LCA team, usually with an external LCA consultant; upstream inputs come from the cell and cathode material suppliers.",
    "Vehicle BMS per UN GTR No 22; provided by the OEM or read out via the vehicle interface.",
    "Vehicle manufacturer (OEM) from the type-approval test under UN GTR No 22; the battery supplier usually receives it from the OEM.",
    "Vehicle manufacturer or pack manufacturer as the economic operator; part of the design specification.",
  ],
  "bySubmodel": [
    [
      1,
      "83.3",
    ],
    [
      3,
      "0.0",
    ],
    [
      4,
      "0.0",
    ],
    [
      5,
      "0.0",
    ],
    [
      6,
      "60.0",
    ],
    [
      7,
      "0.0",
    ],
    [
      null,
      "0.0",
    ],
  ],
  "category": "EV",
  "completeness": {
    "mandatory": {
      "percent": "27.7",
      "present": 13,
      "total": 47,
    },
    "overall": {
      "percent": "21.7",
      "present": 13,
      "total": 60,
    },
  },
  "invalid": [
    "criticalRawMaterials",
  ],
  "statuses": {
    "invalid": 1,
    "missing": 71,
    "present": 21,
  },
}
`;

exports[`gap report snapshots > is stable for industrial-bad-decimal 1`] = `
{
  "buckets": {
    "conditional": 29,
    "deferred": 22,
    "optional": 6,
    "required": 36,
  },
  "byDataOwner": [
    "After-sales or service department of the pack manufacturer; often the manufacturer itself plus authorised service partners.",
    "Battery management system (BMS) charge counter.",
    "Battery management system (BMS) counters.",
    "Battery management system (BMS) cycle counter.",
    "Battery management system (BMS) energy counter.",
    "Battery management system (BMS) event log.",
    "Battery management system (BMS) of the vehicle; provided by the OEM or read out in the workshop.",
    "Battery management system (BMS) or periodic storage measurement by the operator.",
    "Battery management system (BMS) or the operator's periodic measurements.",
    "Battery management system (BMS) temperature sensors; logged by the operator.",
    "Battery management system (BMS), where the BMS can determine it.",
    "Battery management system (BMS); read out by the operator or workshop.",
    "Battery management system (BMS); read out by the operator, fleet manager or workshop.",
    "Battery management system (BMS); recorded periodically by the operator.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, backed by recycler certificates.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, backed by recycler certificates.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation; the pack manufacturer rarely has it and must request it.",
    "Cell and pack data sheet (storage conditions).",
    "Cell and pack data sheet; printed on the nameplate.",
    "Cell and pack data sheet; set in the BMS configuration.",
    "Cell manufacturer (cell-level bill of materials); the pack manufacturer usually only holds the cell data sheet and must request this.",
    "Cell manufacturer and cathode/anode active material suppliers; often available through IMDS/CDX material declarations.",
    "Cell manufacturer's cycle-life test report; declared by the pack manufacturer for the reference conditions.",
    "Cell manufacturer's cycle-life test report; pack manufacturer's specification for the pack.",
    "Cell manufacturer's data sheet (storage test at reference temperature).",
    "Cell manufacturer's data sheet for the cell value; pack manufacturer's end-of-line test for module and pack values.",
    "Cell manufacturer's data sheet; the pack manufacturer repeats it in its own specification.",
    "Cell manufacturer's data sheet; the pack manufacturer states the pack value in its specification.",
    "Cell or pack manufacturer's ageing test report.",
    "Cell or pack manufacturer's cycle-life test report.",
    "Cell or pack manufacturer's test laboratory; named in the cycle-life test report.",
    "Cell or pack manufacturer's test report under reference conditions.",
    "Compliance department, collected from refiners and material suppliers who participate in Commission-recognised schemes (Article 53).",
    "Compliance or procurement department of the economic operator placing the battery on the market; the report is verified by a notified body and published annually.",
    "Derived by the pack manufacturer from nominal power and energy on the data sheet.",
    "Determined by the manufacturer from the declared footprint once the Commission's delegated act defines the class boundaries.",
    "Determined by the manufacturer from the intended use (Article 3 definitions); usually obvious from the product data sheet.",
    "EHS department or the cell manufacturer's safety data sheet (section 5, firefighting measures).",
    "EHS department together with technical documentation; also derived from the cell safety data sheet.",
    "EHS department, from the cell manufacturer's safety data sheet (sections 2 and 3) and the material declaration.",
    "EHS department; the hazard statements are in the safety data sheet, section 2.",
    "LCA team, fed by the plant's energy bills and production data (this is where a supplier's own electricity mix enters).",
    "LCA team, using logistics data (transport modes and distances) from the supply chain or logistics department.",
    "LCA team, using recycling scenarios and recycler data; may be negative when recycling credits are applied.",
    "LCA team; derived from the per-kWh footprint and the lifetime energy throughput.",
    "LCA team; the split by life-cycle stage is part of the carbon footprint study required by Annex II.",
    "Lead supplier or cell manufacturer (relevant for lead-acid industrial batteries), with mass-balance documentation.",
    "Lead supplier or cell manufacturer, backed by recycler certificates.",
    "Operator, fleet manager, insurer or workshop; documented after the event and attached to the passport.",
    "Pack manufacturer or final assembler; printed on the nameplate and stored in the ERP/MES.",
    "Pack manufacturer's ageing test report (pack level mandatory, cell and module recommended).",
    "Pack manufacturer's ageing test report under reference conditions.",
    "Pack manufacturer's bill of materials (ERP/PLM); replaceable components such as modules, BMS, fuses, connectors.",
    "Pack manufacturer's data sheet and test report; measured per Annex IV Part B at a reference state of charge.",
    "Pack manufacturer's data sheet or weighing record at end of line; also on shipping documents.",
    "Pack manufacturer's data sheet; enforced by the BMS.",
    "Pack manufacturer's design specification, supported by the cell manufacturer's calendar ageing data.",
    "Pack manufacturer's engineering and technical documentation team (service manuals, exploded drawings).",
    "Pack manufacturer's materials engineering, based on supplier declarations for housings, separators and binders.",
    "Pack manufacturer's production planning or quality department; the facility identifier is often the plant code in the ERP.",
    "Pack manufacturer's production records (MES); often encoded in the serial number.",
    "Product compliance or marketing communications; often already part of the user manual and the producer's take-back information.",
    "Product compliance team, based on the material declaration from the cell manufacturer (cadmium above 0.002 % or lead above 0.004 % by weight).",
    "Product compliance together with the producer responsibility organisation or contracted recycler.",
    "Product compliance; content aligned with the producer responsibility organisation's take-back scheme.",
    "Quality department or the notified body / test laboratory that performed the tests; part of the technical documentation (Annex VIII).",
    "Sales or legal department of the manufacturer; stated in the warranty terms or data sheet.",
    "Same as the identification attributes: manufacturer master data and the battery model identification.",
    "Set to 'original' by the manufacturer; later changed by the remanufacturer, repurposer or waste operator who takes over the passport.",
    "Sustainability or LCA team of the manufacturer, once the Commission's delegated act defines the performance classes.",
    "Sustainability or procurement department; often taken from rating platforms used by OEM customers.",
    "Sustainability team; the study must be published on the internet under Article 7(1)(g).",
    "Technical documentation or labelling team of the manufacturer; usually already written for the user manual.",
    "The battery manufacturer's own master data (legal entity name, registered address, single contact point, web and e-mail address).",
    "The company placing the battery on the EU market (manufacturer, importer or distributor acting as operator); its registration or EORI number is in the commercial/customs records.",
    "The economic operator placing the battery on the market (usually the pack manufacturer or importer) assigns it when the passport is created.",
    "The installer or operator of the battery (e-bike dealer, ESS installer, fleet operator), not the manufacturer; it is written into the passport after sale.",
    "The manufacturer's labelling or product compliance team; the artwork is on the label drawing and in the technical documentation.",
    "The manufacturer's regulatory affairs or quality department issues it (Article 18, Annex IX); importers keep a copy.",
    "The manufacturer's sustainability or LCA team, usually with an external LCA consultant; upstream inputs come from the cell and cathode material suppliers.",
    "Vehicle BMS per UN GTR No 22; provided by the OEM or read out via the vehicle interface.",
    "Vehicle manufacturer (OEM) from the type-approval test under UN GTR No 22; the battery supplier usually receives it from the OEM.",
    "Vehicle manufacturer or pack manufacturer as the economic operator; part of the design specification.",
  ],
  "bySubmodel": [
    [
      1,
      "100.0",
    ],
    [
      3,
      "0.0",
    ],
    [
      4,
      "0.0",
    ],
    [
      5,
      "0.0",
    ],
    [
      6,
      "80.0",
    ],
    [
      7,
      "0.0",
    ],
    [
      null,
      "0.0",
    ],
  ],
  "category": "INDUSTRIAL_GT_2KWH",
  "completeness": {
    "mandatory": {
      "percent": "41.7",
      "present": 15,
      "total": 36,
    },
    "overall": {
      "percent": "26.2",
      "present": 17,
      "total": 65,
    },
  },
  "invalid": [
    "carbonFootprintPerFunctionalUnit",
  ],
  "statuses": {
    "invalid": 1,
    "missing": 68,
    "present": 24,
  },
}
`;

exports[`gap report snapshots > is stable for lmt-missing-state-of-charge 1`] = `
{
  "buckets": {
    "conditional": 16,
    "deferred": 22,
    "optional": 6,
    "required": 49,
  },
  "byDataOwner": [
    "After-sales or service department of the pack manufacturer; often the manufacturer itself plus authorised service partners.",
    "Battery management system (BMS) charge counter.",
    "Battery management system (BMS) counters.",
    "Battery management system (BMS) cycle counter.",
    "Battery management system (BMS) energy counter.",
    "Battery management system (BMS) event log.",
    "Battery management system (BMS) of the vehicle; provided by the OEM or read out in the workshop.",
    "Battery management system (BMS) or periodic storage measurement by the operator.",
    "Battery management system (BMS) or the operator's periodic measurements.",
    "Battery management system (BMS) temperature sensors; logged by the operator.",
    "Battery management system (BMS), where the BMS can determine it.",
    "Battery management system (BMS); read out by the operator or workshop.",
    "Battery management system (BMS); read out by the operator, fleet manager or workshop.",
    "Battery management system (BMS); recorded periodically by the operator.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, backed by recycler certificates.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, backed by recycler certificates.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation; the pack manufacturer rarely has it and must request it.",
    "Cell and pack data sheet (storage conditions).",
    "Cell and pack data sheet; printed on the nameplate.",
    "Cell and pack data sheet; set in the BMS configuration.",
    "Cell manufacturer (cell-level bill of materials); the pack manufacturer usually only holds the cell data sheet and must request this.",
    "Cell manufacturer and cathode/anode active material suppliers; often available through IMDS/CDX material declarations.",
    "Cell manufacturer's cycle-life test report; declared by the pack manufacturer for the reference conditions.",
    "Cell manufacturer's cycle-life test report; pack manufacturer's specification for the pack.",
    "Cell manufacturer's data sheet (storage test at reference temperature).",
    "Cell manufacturer's data sheet for the cell value; pack manufacturer's end-of-line test for module and pack values.",
    "Cell manufacturer's data sheet; the pack manufacturer repeats it in its own specification.",
    "Cell manufacturer's data sheet; the pack manufacturer states the pack value in its specification.",
    "Cell or pack manufacturer's ageing test report.",
    "Cell or pack manufacturer's cycle-life test report.",
    "Cell or pack manufacturer's test laboratory; named in the cycle-life test report.",
    "Cell or pack manufacturer's test report under reference conditions.",
    "Compliance department, collected from refiners and material suppliers who participate in Commission-recognised schemes (Article 53).",
    "Compliance or procurement department of the economic operator placing the battery on the market; the report is verified by a notified body and published annually.",
    "Derived by the pack manufacturer from nominal power and energy on the data sheet.",
    "Determined by the manufacturer from the declared footprint once the Commission's delegated act defines the class boundaries.",
    "Determined by the manufacturer from the intended use (Article 3 definitions); usually obvious from the product data sheet.",
    "EHS department or the cell manufacturer's safety data sheet (section 5, firefighting measures).",
    "EHS department together with technical documentation; also derived from the cell safety data sheet.",
    "EHS department, from the cell manufacturer's safety data sheet (sections 2 and 3) and the material declaration.",
    "EHS department; the hazard statements are in the safety data sheet, section 2.",
    "LCA team, fed by the plant's energy bills and production data (this is where a supplier's own electricity mix enters).",
    "LCA team, using logistics data (transport modes and distances) from the supply chain or logistics department.",
    "LCA team, using recycling scenarios and recycler data; may be negative when recycling credits are applied.",
    "LCA team; derived from the per-kWh footprint and the lifetime energy throughput.",
    "LCA team; the split by life-cycle stage is part of the carbon footprint study required by Annex II.",
    "Lead supplier or cell manufacturer (relevant for lead-acid industrial batteries), with mass-balance documentation.",
    "Lead supplier or cell manufacturer, backed by recycler certificates.",
    "Operator, fleet manager, insurer or workshop; documented after the event and attached to the passport.",
    "Pack manufacturer or final assembler; printed on the nameplate and stored in the ERP/MES.",
    "Pack manufacturer's ageing test report (pack level mandatory, cell and module recommended).",
    "Pack manufacturer's ageing test report under reference conditions.",
    "Pack manufacturer's bill of materials (ERP/PLM); replaceable components such as modules, BMS, fuses, connectors.",
    "Pack manufacturer's data sheet and test report; measured per Annex IV Part B at a reference state of charge.",
    "Pack manufacturer's data sheet or weighing record at end of line; also on shipping documents.",
    "Pack manufacturer's data sheet; enforced by the BMS.",
    "Pack manufacturer's design specification, supported by the cell manufacturer's calendar ageing data.",
    "Pack manufacturer's engineering and technical documentation team (service manuals, exploded drawings).",
    "Pack manufacturer's materials engineering, based on supplier declarations for housings, separators and binders.",
    "Pack manufacturer's production planning or quality department; the facility identifier is often the plant code in the ERP.",
    "Pack manufacturer's production records (MES); often encoded in the serial number.",
    "Product compliance or marketing communications; often already part of the user manual and the producer's take-back information.",
    "Product compliance team, based on the material declaration from the cell manufacturer (cadmium above 0.002 % or lead above 0.004 % by weight).",
    "Product compliance together with the producer responsibility organisation or contracted recycler.",
    "Product compliance; content aligned with the producer responsibility organisation's take-back scheme.",
    "Quality department or the notified body / test laboratory that performed the tests; part of the technical documentation (Annex VIII).",
    "Sales or legal department of the manufacturer; stated in the warranty terms or data sheet.",
    "Same as the identification attributes: manufacturer master data and the battery model identification.",
    "Set to 'original' by the manufacturer; later changed by the remanufacturer, repurposer or waste operator who takes over the passport.",
    "Sustainability or LCA team of the manufacturer, once the Commission's delegated act defines the performance classes.",
    "Sustainability or procurement department; often taken from rating platforms used by OEM customers.",
    "Sustainability team; the study must be published on the internet under Article 7(1)(g).",
    "Technical documentation or labelling team of the manufacturer; usually already written for the user manual.",
    "The battery manufacturer's own master data (legal entity name, registered address, single contact point, web and e-mail address).",
    "The company placing the battery on the EU market (manufacturer, importer or distributor acting as operator); its registration or EORI number is in the commercial/customs records.",
    "The economic operator placing the battery on the market (usually the pack manufacturer or importer) assigns it when the passport is created.",
    "The installer or operator of the battery (e-bike dealer, ESS installer, fleet operator), not the manufacturer; it is written into the passport after sale.",
    "The manufacturer's labelling or product compliance team; the artwork is on the label drawing and in the technical documentation.",
    "The manufacturer's regulatory affairs or quality department issues it (Article 18, Annex IX); importers keep a copy.",
    "The manufacturer's sustainability or LCA team, usually with an external LCA consultant; upstream inputs come from the cell and cathode material suppliers.",
    "Vehicle BMS per UN GTR No 22; provided by the OEM or read out via the vehicle interface.",
    "Vehicle manufacturer (OEM) from the type-approval test under UN GTR No 22; the battery supplier usually receives it from the OEM.",
    "Vehicle manufacturer or pack manufacturer as the economic operator; part of the design specification.",
  ],
  "bySubmodel": [
    [
      1,
      "76.9",
    ],
    [
      3,
      "0.0",
    ],
    [
      4,
      "85.7",
    ],
    [
      5,
      "12.5",
    ],
    [
      6,
      "80.0",
    ],
    [
      7,
      "77.8",
    ],
    [
      null,
      "0.0",
    ],
  ],
  "category": "LMT",
  "completeness": {
    "mandatory": {
      "percent": "79.6",
      "present": 39,
      "total": 49,
    },
    "overall": {
      "percent": "63.1",
      "present": 41,
      "total": 65,
    },
  },
  "invalid": [],
  "statuses": {
    "missing": 51,
    "present": 42,
  },
}
`;

exports[`gap report snapshots > is stable for lmt-wrong-date-format 1`] = `
{
  "buckets": {
    "conditional": 16,
    "deferred": 22,
    "optional": 6,
    "required": 49,
  },
  "byDataOwner": [
    "After-sales or service department of the pack manufacturer; often the manufacturer itself plus authorised service partners.",
    "Battery management system (BMS) charge counter.",
    "Battery management system (BMS) counters.",
    "Battery management system (BMS) cycle counter.",
    "Battery management system (BMS) energy counter.",
    "Battery management system (BMS) event log.",
    "Battery management system (BMS) of the vehicle; provided by the OEM or read out in the workshop.",
    "Battery management system (BMS) or periodic storage measurement by the operator.",
    "Battery management system (BMS) or the operator's periodic measurements.",
    "Battery management system (BMS) temperature sensors; logged by the operator.",
    "Battery management system (BMS), where the BMS can determine it.",
    "Battery management system (BMS); read out by the operator or workshop.",
    "Battery management system (BMS); read out by the operator, fleet manager or workshop.",
    "Battery management system (BMS); recorded periodically by the operator.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, backed by recycler certificates.",
    "Cathode active material or electrolyte supplier, or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, backed by recycler certificates.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation.",
    "Cathode active material supplier or cell manufacturer, with mass-balance documentation; the pack manufacturer rarely has it and must request it.",
    "Cell and pack data sheet (storage conditions).",
    "Cell and pack data sheet; printed on the nameplate.",
    "Cell and pack data sheet; set in the BMS configuration.",
    "Cell manufacturer (cell-level bill of materials); the pack manufacturer usually only holds the cell data sheet and must request this.",
    "Cell manufacturer and cathode/anode active material suppliers; often available through IMDS/CDX material declarations.",
    "Cell manufacturer's cycle-life test report; declared by the pack manufacturer for the reference conditions.",
    "Cell manufacturer's cycle-life test report; pack manufacturer's specification for the pack.",
    "Cell manufacturer's data sheet (storage test at reference temperature).",
    "Cell manufacturer's data sheet for the cell value; pack manufacturer's end-of-line test for module and pack values.",
    "Cell manufacturer's data sheet; the pack manufacturer repeats it in its own specification.",
    "Cell manufacturer's data sheet; the pack manufacturer states the pack value in its specification.",
    "Cell or pack manufacturer's ageing test report.",
    "Cell or pack manufacturer's cycle-life test report.",
    "Cell or pack manufacturer's test laboratory; named in the cycle-life test report.",
    "Cell or pack manufacturer's test report under reference conditions.",
    "Compliance department, collected from refiners and material suppliers who participate in Commission-recognised schemes (Article 53).",
    "Compliance or procurement department of the economic operator placing the battery on the market; the report is verified by a notified body and published annually.",
    "Derived by the pack manufacturer from nominal power and energy on the data sheet.",
    "Determined by the manufacturer from the declared footprint once the Commission's delegated act defines the class boundaries.",
    "Determined by the manufacturer from the intended use (Article 3 definitions); usually obvious from the product data sheet.",
    "EHS department or the cell manufacturer's safety data sheet (section 5, firefighting measures).",
    "EHS department together with technical documentation; also derived from the cell safety data sheet.",
    "EHS department, from the cell manufacturer's safety data sheet (sections 2 and 3) and the material declaration.",
    "EHS department; the hazard statements are in the safety data sheet, section 2.",
    "LCA team, fed by the plant's energy bills and production data (this is where a supplier's own electricity mix enters).",
    "LCA team, using logistics data (transport modes and distances) from the supply chain or logistics department.",
    "LCA team, using recycling scenarios and recycler data; may be negative when recycling credits are applied.",
    "LCA team; derived from the per-kWh footprint and the lifetime energy throughput.",
    "LCA team; the split by life-cycle stage is part of the carbon footprint study required by Annex II.",
    "Lead supplier or cell manufacturer (relevant for lead-acid industrial batteries), with mass-balance documentation.",
    "Lead supplier or cell manufacturer, backed by recycler certificates.",
    "Operator, fleet manager, insurer or workshop; documented after the event and attached to the passport.",
    "Pack manufacturer or final assembler; printed on the nameplate and stored in the ERP/MES.",
    "Pack manufacturer's ageing test report (pack level mandatory, cell and module recommended).",
    "Pack manufacturer's ageing test report under reference conditions.",
    "Pack manufacturer's bill of materials (ERP/PLM); replaceable components such as modules, BMS, fuses, connectors.",
    "Pack manufacturer's data sheet and test report; measured per Annex IV Part B at a reference state of charge.",
    "Pack manufacturer's data sheet or weighing record at end of line; also on shipping documents.",
    "Pack manufacturer's data sheet; enforced by the BMS.",
    "Pack manufacturer's design specification, supported by the cell manufacturer's calendar ageing data.",
    "Pack manufacturer's engineering and technical documentation team (service manuals, exploded drawings).",
    "Pack manufacturer's materials engineering, based on supplier declarations for housings, separators and binders.",
    "Pack manufacturer's production planning or quality department; the facility identifier is often the plant code in the ERP.",
    "Pack manufacturer's production records (MES); often encoded in the serial number.",
    "Product compliance or marketing communications; often already part of the user manual and the producer's take-back information.",
    "Product compliance team, based on the material declaration from the cell manufacturer (cadmium above 0.002 % or lead above 0.004 % by weight).",
    "Product compliance together with the producer responsibility organisation or contracted recycler.",
    "Product compliance; content aligned with the producer responsibility organisation's take-back scheme.",
    "Quality department or the notified body / test laboratory that performed the tests; part of the technical documentation (Annex VIII).",
    "Sales or legal department of the manufacturer; stated in the warranty terms or data sheet.",
    "Same as the identification attributes: manufacturer master data and the battery model identification.",
    "Set to 'original' by the manufacturer; later changed by the remanufacturer, repurposer or waste operator who takes over the passport.",
    "Sustainability or LCA team of the manufacturer, once the Commission's delegated act defines the performance classes.",
    "Sustainability or procurement department; often taken from rating platforms used by OEM customers.",
    "Sustainability team; the study must be published on the internet under Article 7(1)(g).",
    "Technical documentation or labelling team of the manufacturer; usually already written for the user manual.",
    "The battery manufacturer's own master data (legal entity name, registered address, single contact point, web and e-mail address).",
    "The company placing the battery on the EU market (manufacturer, importer or distributor acting as operator); its registration or EORI number is in the commercial/customs records.",
    "The economic operator placing the battery on the market (usually the pack manufacturer or importer) assigns it when the passport is created.",
    "The installer or operator of the battery (e-bike dealer, ESS installer, fleet operator), not the manufacturer; it is written into the passport after sale.",
    "The manufacturer's labelling or product compliance team; the artwork is on the label drawing and in the technical documentation.",
    "The manufacturer's regulatory affairs or quality department issues it (Article 18, Annex IX); importers keep a copy.",
    "The manufacturer's sustainability or LCA team, usually with an external LCA consultant; upstream inputs come from the cell and cathode material suppliers.",
    "Vehicle BMS per UN GTR No 22; provided by the OEM or read out via the vehicle interface.",
    "Vehicle manufacturer (OEM) from the type-approval test under UN GTR No 22; the battery supplier usually receives it from the OEM.",
    "Vehicle manufacturer or pack manufacturer as the economic operator; part of the design specification.",
  ],
  "bySubmodel": [
    [
      1,
      "69.2",
    ],
    [
      3,
      "0.0",
    ],
    [
      4,
      "0.0",
    ],
    [
      5,
      "0.0",
    ],
    [
      6,
      "80.0",
    ],
    [
      7,
      "0.0",
    ],
    [
      null,
      "0.0",
    ],
  ],
  "category": "LMT",
  "completeness": {
    "mandatory": {
      "percent": "26.5",
      "present": 13,
      "total": 49,
    },
    "overall": {
      "percent": "20.0",
      "present": 13,
      "total": 65,
    },
  },
  "invalid": [
    "manufacturingDate",
  ],
  "statuses": {
    "invalid": 1,
    "missing": 79,
    "present": 13,
  },
}
`;
